# platform.core.uifw.e-mod-tizen-gesture

./: configure.ac
packaging/: e-mod-tizen-gesture.spec
src/: Makefile.am  e_mod_gesture_conf.c  e_mod_gesture_device.c  e_mod_gesture_events.c  e_mod_main.c  e_mod_main.h
